[package]
name = "korndex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libbitcoinkernel-sys = { path = "../rust-bitcoinkernel/libbitcoinkernel-sys" }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
lmdb = "0.8.0"
clap = { version = "4.0", features = ["derive"] }
log = "0.4.21"
env_logger = "0.11.3"
bitcoin = "0.32.2"

